@@ -6,6 +6,8 @@ Backwards Incompatibilities
 
 * Removed unused PipelinePack.Decoded attribute.
 
+* LogOutput will write data to stdout instead of stderr (#1515).
+
 * Using stftime literals for filenames during rotation in FileOutput plugin (#1469).
 
 Features
